<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Teleprompter‏</string>
    <string name="demo_title">Demo Show</string>
    <string name="demo_text" tools:ignore="Typos">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris lacinia interdum neque et condimentum. Aliquam in ultricies enim. Mauris vel venenatis nisi. Fusce in tempus elit. In commodo, risus et condimentum vestibulum, ligula diam interdum magna, accumsan consequat sem orci at quam. Nam facilisis velit eu ligula posuere ultricies. Aliquam erat volutpat. Nulla rutrum, justo in eleifend scelerisque, felis tortor lobortis metus, eu consectetur tortor tortor eget massa. Nulla facilisi. Morbi mi leo, scelerisque maximus risus at, lacinia egestas ligula. Integer pulvinar, metus at gravida pretium, erat orci congue sapien, in suscipit ipsum ipsum consectetur diam. Suspendisse nunc nibh, volutpat ut venenatis non, ultricies non lacus. Cras dapibus dignissim leo at malesuada. Suspendisse pulvinar quam ut commodo semper.

Quisque ut porta sem, eget cursus dui. Nam turpis ligula, sagittis non aliquet vitae, vestibulum ac nulla. Pellentesque facilisis fermentum consectetur. Aliquam non nulla tincidunt, euismod ex nec, rhoncus ex. Nunc a vulputate nulla. Fusce ultricies libero suscipit pulvinar condimentum. Fusce varius condimentum semper. Suspendisse mi lacus, tempus a dignissim id, elementum at metus.

Aliquam elit velit, iaculis quis dapibus vitae, pretium porttitor quam. Sed lorem diam, faucibus ac justo ut, ullamcorper vestibulum justo. Nunc volutpat urna nunc, id commodo eros hendrerit et. Nam pellentesque laoreet dolor, at pellentesque lorem viverra sit amet. Phasellus fringilla ex et massa consequat tempor. Phasellus dolor sapien, rhoncus sit amet risus et, tempor maximus ipsum. Mauris blandit tempor maximus. Etiam euismod eros nunc, sit amet pretium tortor maximus sed. Nulla at porttitor tellus.

Vestibulum et tempus tellus. Sed sit amet dui et est varius interdum. In viverra eros vitae elit tempus, eget rhoncus ante interdum. Suspendisse ultrices pretium urna in pulvinar. Praesent non tincidunt massa. Donec orci augue, luctus vitae porttitor vitae, iaculis cursus ante. Proin porttitor tincidunt nibh, sed dictum felis sodales sit amet.

Nulla in ultricies libero. Nam ullamcorper orci nec purus sollicitudin, eu consectetur lacus lacinia. Aenean cursus diam lorem, a posuere diam volutpat sit amet. In at ante elementum, pulvinar neque in, malesuada massa. Fusce sapien justo, varius vulputate purus a, finibus gravida neque. Nunc sodales odio arcu, ac varius augue bibendum sed. Curabitur rutrum sed ligula lobortis gravida. Curabitur massa neque, semper a mi sed, porta ullamcorper nisl.

Phasellus ut luctus purus, et malesuada ex. Nulla eu dapibus ante. Quisque aliquet nunc nec fringilla ultricies. Suspendisse aliquet lorem consequat magna condimentum consequat eu sit amet metus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras sem metus, porttitor eget blandit vitae, ornare vel elit. Aenean posuere ut lectus ut tempus. Praesent venenatis tellus metus. Suspendisse vestibulum ante a pretium aliquam. Integer vitae felis ac justo luctus consectetur.

Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam condimentum finibus nisi id lacinia. Ut eu dui et diam ornare molestie ut at nunc. Donec non porttitor turpis. Donec et venenatis neque. Donec sapien ex, scelerisque eget luctus non, lacinia id quam. Aliquam enim tortor, euismod sed pharetra tincidunt, efficitur et leo. Duis et urna ut ipsum tincidunt lacinia eget vitae enim. Duis vestibulum sagittis arcu, vel vulputate sem aliquam non. Etiam volutpat ultrices tempor. Pellentesque eu diam justo. Etiam euismod suscipit libero sit amet ullamcorper. Donec condimentum tellus elit, non semper elit faucibus sed.

Donec venenatis ultricies dignissim. Nunc rhoncus metus id accumsan consequat. Aliquam sollicitudin justo et accumsan ultricies. Vivamus consequat diam nec dui tincidunt tempor. Etiam posuere accumsan risus pharetra convallis. In sit amet turpis posuere, sagittis sem a, eleifend leo. Integer sit amet nulla dapibus, fringilla nisl eu, mattis ex.

Vestibulum interdum commodo enim, nec dignissim quam euismod sed. Vestibulum dui erat, dictum in vehicula ac, ultricies tristique dolor. Etiam commodo in dolor nec suscipit. Fusce ut iaculis velit, nec pellentesque magna. Integer enim purus, vulputate commodo gravida rhoncus, varius nec turpis. Pellentesque hendrerit in tortor sagittis porttitor. Curabitur ac pellentesque tellus, sed pellentesque magna. Fusce dictum laoreet libero id varius. Nullam faucibus semper ipsum at tincidunt.

In semper maximus purus, id sollicitudin ligula molestie vel. Nunc rutrum purus sit amet venenatis aliquam. Suspendisse auctor lectus vel dolor dignissim blandit vel a nibh. Duis commodo mi in ligula congue, eu pharetra felis faucibus. Etiam euismod ultricies nibh, eget pretium lorem lacinia vel. Duis pellentesque, turpis sed dignissim convallis, tortor urna elementum felis, et pharetra dolor augue vel est. Vivamus tempus ultrices suscipit. Donec fermentum elementum sodales. Nulla facilisi. Pellentesque tincidunt arcu risus, ut viverra mi blandit at. Maecenas vel erat sit amet dui commodo molestie sodales nec neque.


</string>
    <string name="enter_title">enter title</string>
    <string name="add_your_text">add your text</string>
    <string name="add_dialog">Save</string>
    <string name="cancel_dialog">@android:string/cancel</string>
    <string name="first_set_color">There is no color has set</string>
    <string name="already_title">this Title is already added</string>
    <string name="already_text">this Text is already added</string>
    <string name="pref_horizontal_mode_label">Horizontal Mode</string>
    <string name="pref_horizontal_mode_key" translatable="false">horizontal_mode</string>
    <string name="pref_true">on</string>
    <string name="pref_false">of</string>
    <string name="pref_timer_key_label">Show Timer</string>
    <string name="pref_timer_key" translatable="false">show_timer</string>
    <string name="pref_toggle_marker_label">Toggle Marker</string>
    <string name="pref_toggle_marker_key" translatable="false">toggle_marker</string>
    <string name="open_camera">Open Camera</string>
    <string name="close_camera">Close Camera</string>
    <string name="pref_open_camera_key" translatable="false">openCamera</string>
    <string name="setting">Setting</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="delete_all">Delete All</string>
    <string name="slow">Slow</string>
    <string name="fast">Fast</string>
    <string name="set_colors">Colors</string>
    <string name="defaults">Default</string>
    <string name="undo">Undo</string>
    <string name="empty_text">Please click on one of the items to start viewing</string>
    <string name="other_setting">Other Setting</string>
    <string name="save_changes">Save Changes</string>
    <string name="read_failed">Error while retrieving file.</string>
    <string name="file_not_selected">No file selected, can not continue.</string>
    <string name="content_loaded">File contents successfully read.</string>
    <string name="select_file">Select file</string>
    <string name="text_transparency">Text transparency</string>
    <string name="background_transparency">Background transparency</string>
    <string name="Delete">Delete</string>
    <string name="click_delete">Click yes to delete selected files!</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="short_title">Title is very short Make it 6 characters at least</string>
    <string name="short_script">Script is very short Make it 100 words at least</string>
    <string name="privacy">Privacy Policy</string>
    <string name="list_description">To view the full text content and run the presentation click here</string>
    <string name="marker_description">Mark the ease of reading line selection</string>
    <string name="play_description">Click here to turn text scrolling on or off</string>
    <string name="f_add_description">To manually add new text</string>
    <string name="f_storage_description">To add text from the internal memory device</string>
    <string name="f_drive_description">Add text from your Google Drive files from your own Google Drive account</string>
    <string name="f_parent_description">Click here to show different input options</string>
    <string name="loading">Loading ...</string>
    <string name="facebook_app_id" translatable="false">308890512940081</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb308890512940081</string>
    <string name="mediaInfoDateFormat" translatable="false">dd MMMM yyyy HH:mm:ss</string>
    <string name="dropBoxAppKey" translatable="false">169uf2hzn1n0iov</string>
    <string name="resolutionDisplay" translatable="false">%1$s*%2$s</string>
    <string name="FC_VID_PREFIX" translatable="false">/FC_VID_</string>
    <string name="FC_IMG_PREFIX" translatable="false">/FC_IMG_</string>
    <string name="VID_EXT" translatable="false">.mp4</string>
    <string name="IMG_EXT" translatable="false">.jpeg</string>
    <string name="ANOTHER_IMG_EXT" translatable="false">.jpg</string>
    <string name="DATE_FORMAT_FOR_FILE" translatable="false">yyyy-MM-dd-HH-mm-ss</string>
    <string name="MEM_PF_KB" translatable="false"> KB</string>
    <string name="MEM_PF_MB" translatable="false"> MB</string>
    <string name="MEM_PF_GB" translatable="false"> GB</string>
    <string name="START_TIME" translatable="false">00 : 00 : 00</string>
    <string name="START_MEMORY" translatable="false">0 MB</string>
    <string name="no_permission_title">No Permission</string>
    <string name="unavailable_permissions_message">Unavailability of permissions will render Teleprompter not to function correctly.</string>
    <string name="exit">EXIT</string>
    <string name="FC_ROOT">/Teleprompter/</string>
    <string name="VIDEO_MODE">VIDEO</string>
    <string name="PHOTO_MODE">PHOTO</string>
    <string name="photo">Photo</string>
    <string name="video">Video</string>
    <string name="MODE">MODE</string>
    <string name="RECORD_SAVED">VIDEO SAVED</string>
    <string name="IMAGE_SAVED">IMAGE SAVED</string>
    <string name="imageType">"image/jpeg"</string>
    <string name="videoType">"video/mp4"</string>
    <string name="deleteTitle">Delete Media</string>
    <string name="deleteMessage">Do you want to delete the %1$s?</string>
    <string name="noConnectionMessage">There seems to be no Internet Connection. Please check your connection, or enable Wi-Fi and try again.</string>
    <string name="okToDelete">OK</string>
    <string name="cancelToDelete">CANCEL</string>
    <string name="noConnectionTitle">Connection Failure</string>
    <string name="autouploadFolderCreated">Teleprompter will now auto upload your videos onto this folder in %1$s.\n\nPlease check your notifications for upload status.</string>
    <string name="signInProgress">Fetching Google Account information in your phone for signing into %1$s.\n\nPlease Wait...</string>
    <string name="signInProgressTitle">Sign In to %1$s</string>
    <string name="autoUploadEnabled">Auto Upload Enabled</string>
    <string name="uploadFolderFound">The below folder was found to be earlier created using Teleprompter:</string>
    <string name="teleprompterContentDescription">Teleprompter Icon</string>
    <string name="placeholderContentDescription">Placeholder Icon</string>
    <string name="uploadFolderDesc">Upload Folder</string>
    <string name="warningSymbol">Warning Message</string>
    <string name="folderSelectTitle">Media Location</string>
    <string name="phoneLocation">PHONE</string>
    <string name="sdcardLocation">SD CARD</string>
    <string name="allLocation">ALL</string>
</resources>