<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">


<!--    <androidx.preference.SwitchPreferenceCompat
        android:defaultValue="@bool/open_camera_default"
        android:key="@string/pref_open_camera_key"
        android:summaryOff="@string/pref_false"
        android:summaryOn="@string/pref_true"
        android:title="@string/open_camera" />-->
    <androidx.preference.SwitchPreferenceCompat

        android:defaultValue="@bool/horizontal_mode_default"
        android:key="@string/pref_horizontal_mode_key"
        android:summaryOff="@string/pref_false"
        android:summaryOn="@string/pref_true"
        android:title="@string/pref_horizontal_mode_label" />

    <androidx.preference.SwitchPreferenceCompat
        android:defaultValue="@bool/timer_default"
        android:key="@string/pref_timer_key"
        android:summaryOff="@string/pref_false"
        android:summaryOn="@string/pref_true"
        android:title="@string/pref_timer_key_label" />

    <androidx.preference.SwitchPreferenceCompat
        android:defaultValue="@bool/toggle_marker_default"
        android:key="@string/pref_toggle_marker_key"
        android:summaryOff="@string/pref_false"
        android:summaryOn="@string/pref_true"
        android:title="@string/pref_toggle_marker_label" />
    <Preference android:title="@string/privacy">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="https://sites.google.com/view/teleprompter-app/home/teleprompter" />
    </Preference>

</androidx.preference.PreferenceScreen>
