<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/folderMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorTransparent"
    android:gravity="top">

    <LinearLayout
        android:id="@+id/heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".05"
            android:contentDescription="@string/teleprompterContentDescription"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="10dp"
            android:text="@string/folderSelectTitle"
            android:textAlignment="center"
            android:textColor="@color/backColorDialog"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".05"
            android:contentDescription="@string/placeholderContentDescription"
            android:src="@drawable/placeholder"
            android:visibility="invisible" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/folderParent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/heading"
        android:layout_marginTop="5dp"
        android:background="@color/colorTransparent"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <com.and.ibrahim.teleprompter.mvp.view.FolderLayout
            android:id="@+id/phoneFolder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            custom:displayImage="@drawable/ic_folder"
            custom:displayText="@string/phoneLocation" />

        <com.and.ibrahim.teleprompter.mvp.view.FolderLayout
            android:id="@+id/sdcardFolder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            custom:displayImage="@drawable/ic_sd_snippet_folder"
            custom:displayText="@string/sdcardLocation" />
    </LinearLayout>

    <com.and.ibrahim.teleprompter.mvp.view.FolderLayout
        android:id="@+id/bothFolder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/folderParent"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        custom:displayImage="@drawable/ic_folder_special"
        custom:displayText="@string/allLocation" />

</RelativeLayout>