<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorTransparent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".05"
            android:src="@mipmap/ic_launcher"
            android:contentDescription="@string/teleprompterContentDescription"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="10dp"
            android:text="@string/deleteTitle"
            android:textAlignment="center"
            android:textColor="@color/White"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".05"
            android:visibility="invisible"
            app:srcCompat="@drawable/placeholder"
            android:contentDescription="@string/placeholderContentDescription"/>

    </LinearLayout>

    <TextView
        android:id="@+id/deleteMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:paddingBottom="25dp"
        android:paddingTop="25dp"
        android:text="@string/deleteMessage"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryText"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/okButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="0.5"
            android:background="@drawable/accent_border_back"
            android:onClick="delete"
            android:text="@string/delete"
            android:textColor="@color/colorAccent" />

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="0.5"
            android:background="@drawable/accent_border_back"
            android:onClick="cancel"
            android:text="@string/cancelToDelete"
            android:textColor="@color/colorAccent" />

    </LinearLayout>
</LinearLayout>