<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorTransparent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/autoUploadHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/flipCamIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_launcher"
                android:contentDescription="@string/teleprompterContentDescription"/>

            <TextView
                android:id="@+id/autoUploadTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/autoUploadEnabled"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryText"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/placeHolderIconAutoUpload"
                android:layout_width="64dp"
                android:layout_height="50dp"
                app:srcCompat="@drawable/placeholder"
                android:contentDescription="@string/placeholderContentDescription"/>

        </LinearLayout>

        <TextView
            android:id="@+id/uploadFirstMsg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/uploadFolderFound"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryText" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_folder"
                android:contentDescription="@string/uploadFolderDesc"/>

            <TextView
                android:id="@+id/folderName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="textView"
                android:textAlignment="textStart"
                android:textColor="@color/colorPrimaryText" />

        </LinearLayout>

        <TextView
            android:id="@+id/autoUploadMsg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/autouploadFolderCreated"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryText" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/enableOk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="10dp"
                android:onClick="closeAutoUpload"
                android:text="@string/okToDelete" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>