<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorTransparent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/saveToHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".05"
            android:contentDescription="@string/teleprompterContentDescription"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/savetocloudtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/signInProgressTitle"
            android:textAlignment="center"
            android:textColor="@color/White"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/signInImage"
            android:layout_width="64dp"
            android:layout_height="50dp"
            android:contentDescription="@string/placeholderContentDescription"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            app:srcCompat="@drawable/placeholder"
            tools:ignore="RtlSymmetry" />

    </LinearLayout>

    <TextView
        android:id="@+id/signInText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/signInProgress"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryText"
        android:textSize="15sp" />
</LinearLayout>