<?xml version="1.0" encoding="utf-8"?><!--suppress AndroidDomInspection -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/add_dialog_width"
    android:layout_height="wrap_content"
    android:layout_gravity="center|bottom"
    android:layout_marginBottom="@dimen/add_dialog_margin_bottom"
    android:background="@drawable/dialog_bg"
    android:orientation="vertical">

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/edit_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_title"
        android:textCursorDrawable="@drawable/text_cursor_cyan"
        android:textSize="@dimen/add_dialog_etext_title_size"
        app:met_baseColor="@color/colorPrimaryText"
        app:met_floatingLabel="highlight"
        app:met_maxCharacters="20"
        app:met_primaryColor="?colorAccent"
        app:met_singleLineEllipsis="true" />

    <com.and.ibrahim.teleprompter.util.LinedEditText
        android:id="@+id/linededit_text_content"
        android:layout_width="match_parent"
        android:layout_height="@dimen/add_dialog_etext_height"
        android:hint="@string/add_your_text"
        android:textColor="@color/colorPrimaryText"
        android:textSize="@dimen/add_dialog_etext_content_size"
        android:textStyle="normal" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txt_cancel"
            android:layout_width="@dimen/add_dialog_text_width"
            android:layout_height="wrap_content"
            android:background="@drawable/oranglt_back"
            android:clickable="true"
            android:focusable="true"
            android:padding="@dimen/add_dialog_text_padding"
            android:text="@string/cancel_dialog"
            android:textAlignment="center"
            android:textColor="@color/color_white"
            android:textSize="@dimen/add_dialog_text_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_add"
            android:layout_width="@dimen/add_dialog_text_width"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_gravity="end"
            android:background="@drawable/oranglt_back"
            android:clickable="true"
            android:focusable="true"
            android:padding="@dimen/add_dialog_text_padding"
            android:text="@string/add_dialog"
            android:textAlignment="center"
            android:textColor="@color/color_white"
            android:textSize="@dimen/add_dialog_text_size"
            android:textStyle="bold" />

    </RelativeLayout>
</LinearLayout>